# opentelemetry-c

./: CMakeLists.txt  README.md  conanfile.txt
include/opentelemetry-c/: common.h
src/: common.cpp
tests/: utils.c
